# cjstr

./: .gitignore  CMakeLists.txt  README.md  cjstr.c  cjstr.h  cjstr_client.js  cjstr_js_api.h  main.c
client/: client.js
src/c/: CMakeLists.txt  cjstr.c  cjstr.h  cjstr_js_api.h  main.c
src/c_js/: index.js
src/js/: CMakeLists.txt  cjstr_client.js  index.js
